fix: add annotation processor to maven compiler
It was accidently removed